[gd_scene load_steps=39 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Art/Champions/Arthax.png" type="Texture" id=2]

[sub_resource type="Animation" id=24]
resource_name = "Attack_Down"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=27]
resource_name = "Attack_Left"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37, 38, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=26]
resource_name = "Attack_Right"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=25]
resource_name = "Attack_Up"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle_Down"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle_Left"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle_Right"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle_Up"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Run_Down"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Run_Left"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Run_Right"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Run_Up"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "Attack_Up"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "Attack_Down"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "Attack_Left"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Attack_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=33]
blend_point_0/node = SubResource( 29 )
blend_point_0/pos = Vector2( 0, -1 )
blend_point_1/node = SubResource( 30 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 31 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 32 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Idle_Up"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Idle_Down"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Idle_Left"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Idle_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( 0, -1 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 1, 0 )

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Run_Up"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Run_Down"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Run_Left"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Run_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( 0, -1 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 1, 0 )

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachine" id=21]
states/Attack/node = SubResource( 33 )
states/Attack/position = Vector2( 249.5, 143 )
states/Idle/node = SubResource( 14 )
states/Idle/position = Vector2( 224.5, 74.5 )
states/Run/node = SubResource( 19 )
states/Run/position = Vector2( 374, 84 )
transitions = [ "Idle", "Run", SubResource( 20 ), "Run", "Idle", SubResource( 34 ), "Attack", "Idle", SubResource( 35 ), "Idle", "Attack", SubResource( 36 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="CapsuleShape2D" id=23]
radius = 4.01399
height = 3.94196

[sub_resource type="CapsuleShape2D" id=28]
radius = 3.99951
height = 13.9983

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5
vframes = 8
frame = 5

[node name="DashTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack_Down = SubResource( 24 )
anims/Attack_Left = SubResource( 27 )
anims/Attack_Right = SubResource( 26 )
anims/Attack_Up = SubResource( 25 )
anims/Idle_Down = SubResource( 1 )
anims/Idle_Left = SubResource( 2 )
anims/Idle_Right = SubResource( 3 )
anims/Idle_Up = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Run_Down = SubResource( 6 )
anims/Run_Left = SubResource( 8 )
anims/Run_Right = SubResource( 9 )
anims/Run_Up = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 22 )
parameters/Attack/blend_position = Vector2( 0, -1 )
parameters/Idle/blend_position = Vector2( -1, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.49012e-08, 4 )
rotation = 1.62567
shape = SubResource( 23 )

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="Pivot" type="Position2D" parent="."]

[node name="Hitbox" type="Area2D" parent="Pivot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Hitbox"]
position = Vector2( 0, 9 )
rotation = 1.5708
shape = SubResource( 28 )

[node name="SwordTimer" type="Timer" parent="."]

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="SwordTimer" to="." method="_on_SwordTimer_timeout"]
